Fixes bad code
