# src/main/java/com/backend/botanicare/controller/RoomController.java
@@ -1,85 +1,68 @@
 package com.backend.botanicare.controller;
 
+import com.backend.botanicare.api.RoomsApi;
+import com.backend.botanicare.exceptions.BadRoomNameException;
+import com.backend.botanicare.mapper.RoomMapper;
 import com.backend.botanicare.model.Room;
+import com.backend.botanicare.model.RoomDto;
 import com.backend.botanicare.service.RoomService;
+import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
+import java.util.ArrayList;
+import java.util.List;
+
 @RestController
-@RequestMapping("/rooms")
-public class RoomController {
+@RequiredArgsConstructor
+public class RoomController implements RoomsApi {
 
     private final RoomService roomService;
 
-    public RoomController(RoomService roomService) {
-        this.roomService = roomService;
+    @Override
+    public ResponseEntity<List<RoomDto>> getAllRooms() {
+        List<Room> rooms = roomService.getAllRooms();
+        List<RoomDto> roomDtos = RoomMapper.INSTANCE.toRoomDtos(rooms);
+        return ResponseEntity.ok(roomDtos);
     }
 
-    @GetMapping
-    public ResponseEntity<?> getAllRooms() {
-        try {
-            return ResponseEntity.ok(roomService.getAllRooms());
-        } catch (Exception e) {
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Error getting Rooms");
-        }
-    }
-
-    @GetMapping("/{roomName}")
-    public ResponseEntity<?> getRoomByName(@PathVariable String roomName) {
+    @Override
+    public ResponseEntity<RoomDto> getRoomByName(String roomName) {
         Room room = roomService.getRoomByName(roomName);
-        if (room != null) {
-            return ResponseEntity.ok(room);
-        } else {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Room not found");
-        }
+        RoomDto roomDto = RoomMapper.INSTANCE.toRoomDto(room);
+        return ResponseEntity.ok(roomDto);
     }
 
-    @PostMapping
-    public ResponseEntity<?> createRoom(@RequestParam("roomName") String roomName) {
+    @Override
+    public ResponseEntity<Void> addNewRoom(RoomDto roomDto) {
+        Room room = RoomMapper.INSTANCE.toRoom(roomDto);
+        String roomName = room.getRoomName();
+
         if (roomName == null || roomName.trim().isEmpty()) {
-            return ResponseEntity.badRequest().body("Room name cannot be empty");
+            throw new BadRoomNameException("Room name cannot be empty or null");
         }
 
-        try {
-            Room createdRoom = roomService.createRoom(roomName);
-            return ResponseEntity.status(HttpStatus.CREATED).body(createdRoom);
-        } catch (Exception e) {
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Error creating Room");
-        }
+        Room createdRoom = roomService.createRoom(roomName);
+        return ResponseEntity.status(HttpStatus.CREATED).build();
     }
 
-    @PutMapping("/{roomName}/addPlant/{plantId}")
-    public ResponseEntity<?> addPlantToRoom(@PathVariable String roomName, @PathVariable Integer plantId) {
-        try {
-            Room updatedRoom = roomService.addPlantToRoom(roomName, plantId);
-            return ResponseEntity.ok(updatedRoom);
-        } catch (IllegalArgumentException e) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(e.getMessage());
-        } catch (Exception e) {
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Error adding plant to Room");
-        }
+    @Override
+    public ResponseEntity<Void> addPlantToRoom(String roomName, Integer plantId) {
+        roomService.addPlantToRoom(roomName, plantId);
+        return ResponseEntity.ok().build();
     }
 
-    @PutMapping("/{roomName}/removePlant/{plantId}")
-    public ResponseEntity<?> removePlantFromRoom(@PathVariable String roomName, @PathVariable Integer plantId) {
-        try {
-            Room updatedRoom = roomService.removePlantFromRoom(roomName, plantId);
-            return ResponseEntity.ok(updatedRoom);
-        } catch (IllegalArgumentException e) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(e.getMessage());
-        } catch (Exception e) {
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Error removing plant from Room");
-        }
+    @Override
+    public ResponseEntity<Void> removePlantFromRoom(String roomName, Integer plantId) {
+        roomService.removePlantFromRoom(roomName, plantId);
+        return ResponseEntity.ok().build();
     }
 
-    @DeleteMapping("/{roomName}")
-    public ResponseEntity<?> deleteRoom(@PathVariable String roomName) {
-        try {
-            roomService.deleteRoom(roomName);
-            return ResponseEntity.status(HttpStatus.NO_CONTENT).build();
-        } catch (Exception e) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Room not found");
-        }
+    @Override
+    public ResponseEntity<Void> deleteRoomByRoomName(String roomName) {
+        roomService.deleteRoom(roomName);
+        return ResponseEntity.status(HttpStatus.NO_CONTENT).build();
     }
+
 }
